# Q-AI-Research

./: .gitignore  .gitmodules  README.md  USERGUIDE.md  git_err.txt
q_engine/: .gitignore  CMakeLists.txt  build_out.txt  compile_err.txt  compile_err_utf8.txt  compile_error.txt  err.txt  error.txt  oracle_ai.py  report.md  run_theorem.lean
q_engine/bindings/: PybindBindings.cpp
q_engine/include/: ActiveInference.h  AlHilbert.h  AutoDiff.h  ConstraintBuilder.h  DimensionalAnalysis.h  ErrorClassifier.h  KnowledgeGraph.h  LLMMutator.h  LeanInterface.h  LeanTranslator.h  MCPBridge.h  NLParser.h  PINN.h  Positivstellensatz.h  PythonBridge.h  QuantumCore.h  RLVR_Agent.h  SchemaGenerator.h  Symbolic.h  Z3Validator.h
q_engine/llmmodel/: README (1).md  params.json
q_engine/src/: ActiveInference.cpp  AlHilbert.cpp  AutoDiff.cpp  ConstraintBuilder.cpp  DimensionalAnalysis.cpp  ErrorClassifier.cpp  KnowledgeGraph.cpp  LLMMutator.cpp  LeanInterface.cpp  LeanTranslator.cpp  MCPBridge.cpp  NLParser.cpp  Positivstellensatz.cpp  PythonBridge.cpp  QuantumCore.cpp  RLVR_Agent.cpp  SchemaGenerator.cpp  Symbolic.cpp  Z3Validator.cpp  main.cpp
q_engine/tests/: test_cerveau.cpp  test_lean_juge.cpp  test_memoire.cpp  test_pinn.cpp  test_quantum.cpp
q_engine/workers/: worker_sindy.py
